# ColorAudio

./: .gitignore  .gitmodules  README.md
src/: CMakeLists.txt  CMakePresets.json.disable  config.json  lv_conf.h  main.c  main.cpp  main.h  pack.sh
src/common/: data_item.cpp  data_item.h  kalman_filter.h  stream.c  stream.h  timestamp.c  timestamp.h  utils.c  utils.cpp  utils.h  utilspp.cpp  utilspp.h
src/common/fft/: FFT.cpp  FFT.h  arduinoFFT.cpp
src/config/: config.cpp  config.h
src/display/: lv_port_disp.c  lv_port_disp.h  lv_port_indev.c  lv_port_indev.h  lv_port_init.c  lv_port_init.h
src/fft/: arduinoFFT.h  defs.h
src/fft/avr/: dtostrf.c  dtostrf.h
src/include/SDL2/: SDL_config.h
src/include/rga/: im2d_buffer.h  im2d_mpi.h  im2d_single.h
src/input/: rime_input.c  rime_input.h
src/lib_src/bluez-alsa/src/: a2dp-aac.c  a2dp-aptx.c  a2dp-opus.c  a2dp-sbc.c  a2dp.c  alsa-transport.h  ba-adapter.c  ba-adapter.h  ba-config.c  ba-config.h  ba-device.c  ba-device.h  ba-transport-pcm.c  ba-transport-pcm.h  ba-transport.c  ba-transport.h  bluez-iface.c  bluez.c  config.h  io.c  main.c  storage.c
src/lib_src/ncmdump/: ncmcrypt.cpp
src/lib_src/ncmdump/include/: base64.h  ncmcrypt.h
src/lib_src/ncmdump/utils/: aes.cpp
src/libs/: libblkid.so.1  libboost_atomic.so.1.83.0  libboost_chrono.so.1.83.0  libboost_container.so.1.83.0  libboost_context.so.1.83.0  libboost_contract.so.1.83.0  libboost_coroutine.so.1.83.0  libboost_date_time.so.1.83.0  libboost_fiber.so.1.83.0  libboost_filesystem.so.1.83.0  libboost_graph.so.1.83.0  libboost_iostreams.so.1.83.0  libboost_json.so.1.83.0  libboost_log.so.1.83.0  libboost_log_setup.so.1.83.0  libboost_math_c99.so.1.83.0  libboost_math_c99f.so.1.83.0  libboost_math_c99l.so.1.83.0  libboost_math_tr1.so.1.83.0  libboost_math_tr1f.so.1.83.0  libboost_math_tr1l.so.1.83.0  libboost_nowide.so.1.83.0  libboost_prg_exec_monitor.so.1.83.0  libboost_program_options.so.1.83.0  libboost_random.so.1.83.0  libboost_regex.so.1.83.0  libboost_serialization.so.1.83.0  libboost_stacktrace_basic.so.1.83.0  libboost_stacktrace_noop.so.1.83.0  libboost_thread.so.1.83.0  libboost_timer.so.1.83.0  libboost_type_erasure.so.1.83.0  libboost_unit_test_framework.so.1.83.0  libboost_wave.so.1.83.0  libboost_wserialization.so.1.83.0  libbz2.so.1.0  libconfig.so.11  libcrypto.so.3  libffi.so.8  libgmodule-2.0.so.0  (+21 more)
src/lvgl/src/draw/: lv_draw_buf.c
src/lvgl/src/osal/: lv_pthread.c  lv_pthread.h
src/music/: dep.cpp  dep.h  flac_metadata.cpp  flac_metadata.h  local_music.cpp  local_music.h  lyric.c  lyric.cpp  lyric.h  mp3_header.c  mp3_header.cpp  mp3_header.h  mp3_id3.cpp  mp3_id3.h  mp3id3.c  mp3id3.h  music.c  music.cpp  music.h  music_player.cpp  music_player.h  net_music.c  net_music.cpp  net_music.h  play_flac.c  play_flac.h  player.c  player.cpp  player.h  player_flac.c  player_flac.h  player_info.c  player_info.h  player_mp3.c  player_mp3.h  sound.c  sound.h  sound_fft.c  sound_fft.h
src/music/163/: cryp163.cpp  cryp163.h  music163.cpp  music163.h
src/music/decoder/: decoder.cpp  decoder.h  decoder_flac.cpp  decoder_flac.h  decoder_mp3.cpp  decoder_mp3.h
src/music/flac/: flac_metadata.cpp
src/music/mp3/: mp3_header.h  mp3_id3.h
src/net/: http_connect.c  http_connect.cpp  http_connect.h  music_api.c  music_api.cpp  music_api.h
src/patch/: 1.LV-Theme-Add.dif
src/player/: player.cpp  player.h  player_info.c  player_info.h  sound.c  sound.cpp  sound.h  sound_fft.cpp
src/player/decoder/: decoder.h  decoder_flac.cpp  decoder_flac.h  decoder_mp3.cpp  decoder_mp3.h
src/sound/: sound.cpp  sound.h  sound_fft.cpp
src/stream/: stream.cpp  stream.h  stream_buffer.cpp  stream_buffer.h  stream_cir.cpp  stream_cir.h  stream_file.cpp  stream_file.h  stream_http.cpp  stream_http.h  stream_mem.cpp  stream_mem.h  stream_ncm.cpp  stream_ncm.h
src/sys/: soc.c  timestamp.c
src/ui/: anim.c  anim.h  font.c  font.h  info.cpp  info.h  info_view.cpp  info_view.h  input_view.cpp  input_view.h  main_view.cpp  main_view.h  mp4.cpp  mp4.h  music_list.cpp  music_list.h  music_main.cpp  music_main.h  music_view.cpp  music_view.h  setting_view.cpp  setting_view.h  ui.cpp  ui.h  view.c  view.h  view_setting.h  view_state.c  view_state.h
src/ui/view/: view_dialog.c  view_dialog.h  view_input.c  view_input.h  view_keyboard.c  view_keyborad.h  view_lyric.c  view_lyric.h  view_main.c  view_main.h  view_music_list.c  view_music_list.h  view_music_main.c  view_music_main.h  view_spectrum.c  view_spectrum.h  view_top_info.c  view_top_info.h  view_wifi.c  view_wifi.h
src/ui/view/assets/: img_lv_back.c  img_lv_bg1.c  img_lv_bg2.c  (+32 more)
src/usb/: usb_audio.cpp  usb_audio.h  usb_monitor.cpp  usb_monitor.h
src/view/: anim.h  font.c  font.h  music_list.c  music_list.h  music_main.c  music_main.h  view.c  view.h  view_input.c  view_input.h  view_keyboard.c  view_keyborad.h  view_lyric.c  view_lyric.h  view_main.c  view_main.h  view_top_info.c  view_top_info.h
src/view/assets/: img_lv_bg1.c  img_lv_bg2.c  img_lv_demo_music_btn_corner_large.c  img_lv_demo_music_btn_list_pause_large.c  img_lv_demo_music_btn_list_play_large.c  img_lv_demo_music_btn_loop_large.c  img_lv_demo_music_btn_next_large.c  img_lv_demo_music_btn_pause_large.c  img_lv_demo_music_btn_play_large.c  img_lv_demo_music_btn_prev_large.c  img_lv_demo_music_btn_rnd_large.c  img_lv_demo_music_corner_left_large.c  img_lv_demo_music_corner_right_large.c  img_lv_demo_music_cover_1_large.c  img_lv_demo_music_cover_2_large.c  img_lv_demo_music_cover_3_large.c  img_lv_demo_music_icon_1_large.c  img_lv_demo_music_icon_2_large.c  img_lv_demo_music_icon_3_large.c  img_lv_demo_music_icon_4_large.c  img_lv_demo_music_list_border_large.c  img_lv_demo_music_logo.c  img_lv_demo_music_slider_knob_large.c  img_lv_demo_music_wave_bottom_large.c  img_lv_demo_music_wave_top_large.c  img_lv_music_speaker.c
src/wireless/: alsa-transport.c  ble.cpp  ble.h  ble_agent.cpp  ble_agent.h  ble_battery.cpp  ble_battery.h  ble_info.cpp  ble_info.h  ble_transport.c  le_audio.cpp  le_audio.h  wifi.cpp  wifi.h  wireless.cpp  wireless.h
(+140 files in other folders)
